saves/test/demo_CMB_20240902_134434/conditional/eval2_GoldenTB_and_mutants/mutatnt_3/GeneratedTB/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/bin/bin/iverilog -g2012 -o run.vvp conditional_tb.v conditional.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/bin/bin/vvp run.vvp
iverilog cmd 2 output:
conditional_tb.v:75: $finish called at 100000 (1ps)

iverilog cmd 2 error:

